# PaOProject

./: .gitignore  CMakeLists.txt  PaOProject.pro  main.cpp  prova.json  prova.xml
Classi/: Book.cpp  Book.h  CD.cpp  CD.h  Comic.cpp  Comic.h  Disk.cpp  Disk.h  Magazine.cpp  Magazine.h  Movie.cpp  Movie.h  Paper_Product.cpp  Paper_Product.h  Periodical.cpp  Periodical.h  Product.cpp  Product.h  Vinyl.cpp  Vinyl.h
GUI/: BookPage.cpp  BookPage.h  mainwindow.cpp  mainwindow.h
src/: main.cpp
src/Factory/: ProductFactory.h
src/Factory/JSON/: JsonProductFactory.h
src/Factory/JSON/Factories/: JsonBookFactory.cpp  JsonBookFactory.h  JsonCDFactory.cpp  JsonCDFactory.h  JsonComicFactory.cpp  JsonComicFactory.h  JsonMagazineFactory.cpp  JsonMagazineFactory.h  JsonMovieFactory.cpp  JsonMovieFactory.h  JsonVinylFactory.cpp  JsonVinylFactory.h
src/Factory/XML/: XmlProductFactory.h
src/Factory/XML/Factories/: XmlBookFactory.cpp  XmlBookFactory.h  XmlCDFactory.cpp  XmlCDFactory.h  XmlComicFactory.cpp  XmlComicFactory.h  XmlMagazineFactory.cpp  XmlMagazineFactory.h  XmlMovieFactory.cpp  XmlMovieFactory.h  XmlVinylFactory.cpp  XmlVinylFactory.h
src/FileManagement/Export/JSON/: JsonExportVisitor.cpp  JsonExportVisitor.h
src/FileManagement/Export/XML/: XmlExportVisitor.cpp  XmlExportVisitor.h
src/FileManagement/Import/: Import.h
src/FileManagement/Import/JSON/: JsonImport.cpp  JsonImport.h
src/FileManagement/Import/XML/: XmlImport.cpp  XmlImport.h
src/Model/: Book.cpp  Book.h  CD.cpp  CD.h  Comic.cpp  Comic.h  Disk.cpp  Disk.h  Magazine.cpp  Magazine.h  Movie.cpp  Movie.h  PaperProduct.cpp  PaperProduct.h  Paper_Product.cpp  Paper_Product.h  Periodical.cpp  Periodical.h  Product.cpp  Product.h  Vinyl.cpp  Vinyl.h
src/View/: BookPage.cpp  BookPage.h  CDPage.cpp  CDPage.h  MainWindow.cpp  MainWindow.h  ProductFormPage.cpp  ProductFormPage.h  RegisterProduct.cpp  RegisterProduct.h  Window.cpp  Window.h  mainwindow.cpp  mainwindow.h
src/Visitor/: ExportVisitor.h  ProductVisitor.h
src/Visitor/Export/JSON/: JsonExportVisitor.cpp  JsonExportVisitor.h
src/Visitor/Import/JSON/: JsonImportVisitor.cpp  JsonImportVisitor.h
